@@ -1,4 +1,6 @@
 - do not preinstall mageia-gfxboot-theme
+- bootloader configuration:
+  o fix not being able to edit default grub2 cmdline (mga#18952)
 
 Version 17.51 - 12 July 2016
 
