@@ -1,3 +1,6 @@
+- drakboot:
+  o fix not being able to edit default grub2 cmdline (mga#18952)
+
 Version 17.51 - 12 July 2016
 
 - diskdrake:
